2008-12-25  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #10012: TYPO3 generates incorrect ETag

2008-12-24  Francois Suter  <francois@typo3.org>

	* Fixed bug #9948: Label rm.clearCache_pages was abusively removed from core lang file

2008-12-23  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9999: Setting [BE][compressionLevel]=true causes problems

2008-12-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9810: ClearCacheMenu doesn't work when click on icon

2008-12-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9932: htmlArea RTE Spellcheck does not work when TYPO3 is installed in subdir

2008-12-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9977: Extensions class.ext_update.php scripts are executed even when extension isn't loaded
	* Fixed bug #8492: tiny stuff in the Help Module (moved about and cshmanual to sysext)
	* Fixed bug #8205: Shortcut ends in parse_url-error
	* Fixed bug #9773: Fallback for skinImg having forceFileExtension

2008-12-20  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #8952: Flags are missing
	* Fixed bug #8525: added Korean flag

2008-12-20  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature #5835: Fix formatting and remove superfluous wrap in tslib_content::wrapSpace()
	* Added feature #5203: Add file operation permissions for back-end user groups (thanks to Christian Kuhn)

2008-12-19  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9964: Missing file icon PPT

2008-12-18  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9772: t3lib_parsehtml_proc does not provide Page TSConfig to user-defined RTE transformations

2008-12-18  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #7265: Submodules of Web module can't work with mod.php and the _DISPATCH system

2008-12-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9944: Unneccessary wildcard string comparisons in EM (thanks to Marcus Krause)
	* Fixed bug #9947: gzip compression does not work in BE at all